# vimeoapi

./: README.md  pyproject.toml
vimeorganizer/: __init__.py  __main__.py  pyproject.toml  vimeorganizer.py
